Fixed a bug that allows invitation to followers
> Prevents invitation to be sent to people who are already following the
board.

--- a/www/boardsettings.html
+++ b/www/boardsettings.html
@@ -219,11 +219,16 @@
 			$("#failInvite").effect("fade", "", 500, "");
 			return;
 		}
+		var followers = "{{ board.followers }}";
+		if (followers.indexOf(invitee) > -1) {
+			$("#failInvite").effect("fade", "", 500, "");
+			return;
+		}
 		$.post("/inviteUsers", {
-				user: invitee,
-				boardUser: "{{ board.boardUser }}",
-				boardID: {{ board.boardID }},
-				boardName: "{{ board.boardName }}"
+			user: invitee,
+			boardUser: "{{ board.boardUser }}",
+			boardID: {{ board.boardID }},
+			boardName: "{{ board.boardName }}"
 		}).done(function( data ) {
 			$("#successInvite").effect("fade", "", 500, "");
 			document.getElementById("failInvite").style.display = "none";
