--- a/www/index.html
+++ b/www/index.html
@@ -11,24 +11,24 @@
 		background-image: url("../images/galacticmetropolis3.png");
 	}*/
 	.jumbotron {
-		background-image: url("../images/galacticmetropolis2.png");
+		background-image: url("../images/space1.jpg");
 	}
 	#pinnerspace {
 		font-family: "Trebuchet MS", Helvetica, sans-serif;
 		font-size: 3em;
 		color:white;
 	}
-	#pinboard {
-  		border-style: ridge;
-  		border-width: 10px;
-  		border-color: #E7CAA4;
-  	}
 	#wb {
 		color:white;
 	}
 	#wb-logout, #nav-menu {
 		background-color: rgba(0,0,0,0.2);
 	}
+	#pinboard {
+  		border-style: ridge;
+  		border-width: 10px;
+  		border-color: #E7CAA4;
+  	}
 
 	table.center {
     	margin-left:auto; 
