--- a/www/mainpage.html
+++ b/www/mainpage.html
@@ -22,12 +22,29 @@
 		fb_pressed.src = '/images/fb_pressed.png';
 	}
 	</script>
+	<style>
+	.jumbotron {
+		background-image: url("../images/space1.jpg");
+	}
+	#pinnerspace {
+		font-family: "Trebuchet MS", Helvetica, sans-serif;
+		font-size: 3em;
+		color:white;
+	}
+	#wb {
+		color:white;
+	}
+	#wb-logout, #nav-menu {
+		background-color: rgba(0,0,0,0.2);
+	}
+	</style>
 </head>
 <body>
 	<div class="jumbotron" align="center">
-		<h2 class="title">PinnerSpace</h2>
-		<p><a href="/login/Google"><img src="../images/google_active.png" onmouseover="this.src=google_over.src" onmouseout="this.src=google_active.src" onmousedown="this.src=google_pressed.src"/></a></p>
-		<p><a href="/login/FaceBook"><img src="../images/fb_active.png" onmouseover="this.src=fb_over.src" onmouseout="this.src=fb_active.src" onmousedown="this.src=fb_pressed.src"/></a></p>
+		<h2 id="pinnerspace" class="title" style="text-align: center">PinnerSpace</h2>
+		<h5 id="subtitle" style="text-align: center; color: white">A virtual-pinboard application which allows multiple users per board.</h5>
+		<p><a href="/login/Google"><img src="../images/google_active.png" onmouseover="this.src=google_over.src" onmouseout="this.src=google_active.src" onmousedown="this.src=google_pressed.src"/></a>
+		<a href="/login/FaceBook"><img src="../images/fb_active.png" onmouseover="this.src=fb_over.src" onmouseout="this.src=fb_active.src" onmousedown="this.src=fb_pressed.src"/></a>
 		<p><a class="btn" href="/login">Localhost Login</a></p>
 	</div>
 
